--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
 
   <title>try1</title>
   <link rel="manifest" href="manifest.json">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsL02OhZompTPU81wFwwi1xI3TZ6SNNPU"></script>
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
